[tool.poetry]
name = "incubator-flagon-distill"
version = "0.1.0"
description = "Apache Distill is an analytics framework for handling and analyzing UserALE data. Distill allows you to focus on the data you want and model it. Distill empowers you to learn more from your data than any commercial service; use Distill's analytic libraries to generate statistics on how users interact with different elements of your application and also understand how users interact with your applications. Distill specializes in models of sequence and workflow so that you can understand how users experiment with your application and whether they interact with your application the way you expected. Distill is written in Python and built for scalable growth and customization. "
authors = []
license = "Apache License"
readme = "README.md"
packages = [{ include = "incubator_flagon_distill" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
networkx = "^2.5"
pandas = "^1.2.4"
plotly = "^5.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^6.2.3"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
black = "^23.1.0"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
setuptools = "^67.6.1"
pre-commit = "^3.3.3"

[tool.ruff]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
]
exclude = ["tests/data/", ".github/", "docs/", "examples/"]


[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["tests/data/", ".github/", "docs/", "examples/"]

[tool.coverage.run]
omit = ["tests/*", "Dashboard/*", "docs/*", "examples/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
